--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Fidi</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
@@ -10,6 +10,11 @@
   <% flash.each do |message_type, message| %>
     <div class="alert alert-<%= message_type %>"><%= message %></div>
   <% end %>
+    <ul class="header">
+      <li><%= link_to "Booths",   admin_booths_path %></li>
+      <li><%= link_to "Posts",   admin_posts_path %></li>
+      <li><%= link_to "Users",   admin_users_path %></li>
+    </ul>
 
 
 <%= yield %>
