--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -26,7 +26,7 @@
     <tr>
       <th>ID</th>
       <th>Name</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
@@ -34,8 +34,7 @@
     <% User.all.each do |user| %>
       <tr>
         <td><%= user.id %></td>
-        <td><%= user.name %></td>
-        <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
+        <td><%= link_to user.name, edit_admin_user_path(user) %></td>
         <td><%= link_to 'Destroy', admin_user_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
