added working fidi devise user

--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,2 +1,4 @@
 <h1>Attempts#new, probably from attempt_for</h1>
 <p>Find me in app/views/attempts/new.html.erb</p>
+<h1>Fidder: <%= @current_fidder.email %></h1>
+<h1>Booth: <%= @current_fidder.booth.name %></h1>
