--- a/app/assets/stylesheets/attempts.scss
+++ b/app/assets/stylesheets/attempts.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Attempts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.slide
+{
+	height: 100px;
+}
