--- a/app/views/attempts/new.html.erb
+++ b/app/views/attempts/new.html.erb
@@ -1,11 +1,8 @@
-<h1>Attempts#new, probably from attempt_for</h1>
-<p>Find me in app/views/attempts/new.html.erb</p>
-<h1>Fidder: <%= @current_fidder.email %></h1>
-
+<h1>Tu esi: <%= @current_fidder.email %></h1>
 <h1>Dalyvis: <%= @user.name %></h1>
 <h1>Atrakcionas: <%= @current_fidder.booth.name %></h1>
 
-<%= form_for(@attempt) do |f| %>
+<%= form_for @attempt, :html => {:class => "form-horizontal center"} do |f| %>
 
   <%= f.hidden_field :user_id, :value => @user.id %>
   <%= f.hidden_field :booth_id, :value => @current_fidder.booth.id %>
@@ -13,20 +10,15 @@
   <div class="field">
     <%= f.label :score %><br>
     <% if @booth.min_score.present? && @booth.max_score.present? %>
-      <%= f.range_field :score, :min=>@booth.min_score, :max=>@booth.max_score, :class=>"slide", :id=>"slider1"%>
-      <text id="W1"> <%=@booth.max_score%> </text>
+      <%= f.range_field :score, :min=>@booth.min_score, :max=>@booth.max_score, :class=>"slide", :id=>"slider1", :style => "height: 100; font-size: 30px" %>
+      <text id="W1" style="font-size: 30px"> <%=@booth.max_score%> </text>
     <% else %>
-      <%= f.select(:score, @booth.available_scores.map { |value| [ value, value ] }) %>
+      <%= f.select(:score, @booth.available_scores.map { |value| [ value, value ] }, {}, :style => "width:100px; height: 40px; font-size: 30px") %>
     <% end %>
   <div>
 
-  <div class="field">
-    <%= f.label :comment %><br>
-    <%= f.text_field :comment %>
-  </div>
-
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit :style => "height: 100px; width: 100px" %>
   </div>
 <% end %>
 
